@@ -7,7 +7,6 @@ import com.github.argon.sos.mod.sdk.game.asset.init.Init;
 import com.github.argon.sos.mod.sdk.game.asset.sprite.Sprite;
 import com.github.argon.sos.mod.sdk.game.asset.text.Text;
 import com.github.argon.sos.mod.sdk.json.element.JsonObject;
-import com.github.argon.sos.mod.sdk.util.Lists;
 import com.github.argon.sos.mod.sdk.util.StringUtil;
 import init.paths.PATH;
 import lombok.AccessLevel;
@@ -17,7 +16,7 @@ import lombok.experimental.Accessors;
 
 import java.io.IOException;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 /**
  * Main access to game resources like config files, folders or sprites.
@@ -43,16 +42,70 @@ public class GameAssets {
         .fileTitles().stream()
         .map(resource -> StringUtil.removeBeginning(resource, "_"))
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     @Getter(lazy = true)
     private final static List<String> races = init().race().fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceHomeFiles = init().race().home().fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceKingFiles = text().race().king().fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceRaiderMessageFiles = text().race().raider().folder("message").fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceRaiderNameFiles = text().race().raider().folder("name").fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceBioFiles = text().race().bio().fileTitles();
+    @Getter(lazy = true)
+    private final static List<String> raceBioSpecificFiles = text().race().bio().folder("specific").fileTitles();
+
+    @Getter(lazy = true)
+    private final static List<String> worldNameFiles = text().names().folder("world").fileTitles();
+
+    @Getter(lazy = true)
+    private final static List<String> touristTextFiles = text().race().tourist().fileTitles();
 
     /**
      * Hardcoded by the game
      */
     @Getter(lazy = true)
-    private final static List<String> humanClasses = Lists.of("CITIZEN", "CHILD", "NOBLE", "OTHER", "SLAVE");
+    private final static List<String> humanClasses = List.of("CITIZEN", "CHILD", "NOBLE", "OTHER", "SLAVE");
+
+    @Getter(lazy = true)
+    private final static List<String> supplies = init().resource().supply().fileTitles();
+
+    @Getter(lazy = true)
+    private final static List<String> allEquipments = Stream.concat(
+        Stream.concat(getBattleEquipments().stream(), getRangedEquipments().stream()),
+        getCivicEquipments().stream()
+    ).toList();
+
+    @Getter(lazy = true)
+    private final static List<String> crimes = init().config().json("LAW")
+        .map(json -> json.get("CRIMES"))
+        .map(JsonObject.class::cast)
+        .map(JsonObject::keys)
+        .get();
+
+    @Getter(lazy = true)
+    private final static List<String> punishments = init().config().json("LAW")
+        .map(json -> json.get("PUNISHMENTS"))
+        .map(JsonObject.class::cast)
+        .map(JsonObject::keys)
+        .get();
+
+    @Getter(lazy = true)
+    private final static List<String> battleEquipments = init().stats().folder("equip").folder("battle").fileTitles().stream()
+        .map(equip -> "BATTLE_" + equip)
+        .toList();
+    @Getter(lazy = true)
+    private final static List<String> rangedEquipments = init().stats().folder("equip").folder("ranged").fileTitles().stream()
+        .map(equip -> "RANGED_" + equip)
+        .toList();
+    @Getter(lazy = true)
+    private final static List<String> civicEquipments = init().stats().folder("equip").folder("civic").fileTitles().stream()
+        .map(equip -> "CIVIC_" + equip)
+        .toList();;
 
     @Getter(lazy = true)
     private final static List<String> edibles = init().resource().edible().fileTitles();
@@ -76,6 +129,17 @@ public class GameAssets {
     private final static List<String> rooms = init().room().fileTitles();
 
     @Getter(lazy = true)
+    private final static List<String> worldBuildings = init().world().folder("building")
+        .folders().values().stream()
+        .flatMap(folder -> folder.fileTitles().stream())
+        .toList();
+
+    @Getter(lazy = true)
+    private final static List<String> poolRooms = init().room().fileTitles().stream()
+        .filter(room -> room.startsWith("POOL_"))
+        .toList();
+
+    @Getter(lazy = true)
     private final static List<String> environments = init().settlement().environment().fileTitles();
 
     @Getter(lazy = true)
@@ -88,6 +152,9 @@ public class GameAssets {
     private final static List<String> religions = init().religion().fileTitles();
 
     @Getter(lazy = true)
+    private final static List<String> sacrifices = List.of("RESOURCE", "ANIMAL", "HUMAN");
+
+    @Getter(lazy = true)
     private final static List<String> needs = init().stats().folder("need").fileTitles();
 
     @Getter(lazy = true)
@@ -96,33 +163,33 @@ public class GameAssets {
     @Getter(lazy = true)
     private final static List<String> boosters = readResourceLines("game/boosters.txt").stream()
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     /**
      * Hardcoded by the game
      */
     @Getter(lazy = true)
-    private final static List<String> climates = Lists.of("COLD", "HOT", "TEMPERATE");
+    private final static List<String> climates = List.of("COLD", "HOT", "TEMPERATE");
 
     @Getter(lazy = true)
     private static final List<String> monuments = getRooms().stream()
         .filter(name -> name.startsWith("MONUMENT_"))
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     @Getter(lazy = true)
     private final static List<String> stats = text().stats().json("NAMES")
         .map(JsonObject::keys)
-        .orElse(Lists.of())
+        .orElse(List.of())
         .stream()
         .sorted()
-        .collect(Collectors.toList());
+        .toList();
 
     /**
      * Hardcoded by the game
      */
     @Getter(lazy = true)
-    private final static List<String> terrains = Lists.of("OCEAN", "WET", "MOUNTAIN", "FOREST", "NONE");
+    private final static List<String> terrains = List.of("OCEAN", "WET", "MOUNTAIN", "FOREST", "NONE");
 
     public static GameFolder get(PATH path) {
         if (path.get().startsWith(init().getFolder().path().get())) {
@@ -143,7 +210,7 @@ public class GameAssets {
         try {
             return ModSdkModule.resourceService().readLines(path);
         } catch (IOException e) {
-            return Lists.of();
+            return List.of();
         }
     }
 }
