@@ -15,9 +15,8 @@ import snake2d.util.datatypes.DIR;
 import util.gui.misc.GText;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class DropDownList extends AbstractButton<List<String>, DropDownList> implements Refreshable {
+public class DropDownList extends AbstractButton<List<String>> implements Refreshable {
 
     private final List<String> possibleValues;
 
@@ -69,7 +68,7 @@ public class DropDownList extends AbstractButton<List<String>, DropDownList> imp
 
         List<DropDown<String>> dropDowns = values.stream()
             .map(this::dropDown)
-            .collect(Collectors.toList());
+            .toList();
         uiList = new UiList<>(dropDowns, height, this::dropDown);
         uiList.valueChangeAction(__ -> refresh());
 
@@ -132,10 +131,5 @@ public class DropDownList extends AbstractButton<List<String>, DropDownList> imp
         GText gText = new GText(UI.FONT().M, title);
         replaceLabel(gText, DIR.C);
         refreshAction.accept();
-    }
-
-    @Override
-    protected DropDownList element() {
-        return this;
     }
 }
